[tool.poetry]
name = "sprout-lands"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pywin32 = "^306"
types-pywin32 = "^306.0.0.4"
pytest = "^7.4.2"
pylint = "^3.0.1"
pre-commit = "^3.5.0"
pylance = "^0.8.5"
python-dotenv = "^1.0.0"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
